# datascope

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
src/: cli.rs  error.rs  infer.rs  main.rs  pattern.rs  profile.rs  schema.rs  stats.rs
src/format/: csv_reader.rs  json_reader.rs  mod.rs
src/output/: csv_output.rs  json_output.rs  mod.rs  text.rs
tests/: integration.rs
tests/fixtures/: sample.csv  sample.json  sample.jsonl
